# RaeenOS--Rust-

./: .gitignore  CLAUDE.md  Cargo.toml  RAEENOS_REVOLUTIONARY_FEATURES.md  README.md  Xargo.toml  build_userspace_test.sh  rust-toolchain.toml  userspace_test  userspace_test.s  userspace_thread_stress.s
.cargo/: config.toml
.claude/: settings.local.json
.cursor/rules/: main-rule.mdc
.github/scripts/: slo_gate_check.py
.github/workflows/: slo-gates.yml
.trae/rules/: project_rules.md
Docs/: Choice.md  Production_Checklist.md  RaeenOS.md
Docs/CI/: slo_results.schema.json
Docs/Perf/: reference_skus.yaml  standard_app_mix_v1.md  standard_app_mix_v1.yaml
kernel/: Cargo.toml  build.rs  check_output.txt  error_output.txt  linker.ld
kernel/.cargo/: config.toml
kernel/src/: apic.rs  arch.rs  capabilities.rs  context_switch.s  drivers.rs  elf.rs  filesystem.rs  filesystem_test.rs  gdt.rs  graphics.rs  heap.rs  input.rs  interrupts.rs  ipc.rs  ipc_test.rs  lib.rs  main.rs  memory.rs  microkernel.rs  network.rs  nvme_perf_tests.rs  pci.rs  percpu.rs  process.rs  rae_assistant.rs  raede.rs  raekit.rs  raepkg.rs  raeshell.rs  secure_boot.rs  security.rs  serial.rs  slo.rs  slo_tests.rs  sound.rs  syscall.rs  tarfs.rs  time.rs  uefi.rs  ui.rs  (+3 more)
kernel/src/observability/: crash_handler.rs  flight_recorder.rs  mod.rs  trace_correlation.rs  tracepoints.rs  watchdog.rs
services/: mod.rs
services/ai/: mod.rs
services/contracts/: ai.rs  graphics.rs  mod.rs  network.rs
services/desktop/: app_expose.rs  file_operations.rs  mod.rs  rae_dock.rs  rae_finder.rs  rae_spaces.rs  rae_spot.rs  rae_stacks.rs  rae_start.rs  snap_designer.rs  window_manager.rs
services/graphics/: mod.rs
services/manager/: health_monitor.rs  ipc_router.rs  mod.rs  resource_manager.rs  service_registry.rs
services/network/: mod.rs
tools/package/: Cargo.toml
tools/package/src/: main.rs
tools/test/: Cargo.toml
tools/test/src/: main.rs  slo.rs
