[workspace]
members = [
    "kernel"
    # Temporarily disabled tools due to serde dependency conflicts
    # "tools/build",
    # "tools/test",
    # "tools/package"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["RaeenOS Team"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/raeen/raeen-os"
homepage = "https://raeen.dev"
description = "RaeenOS - A modern, secure, and user-friendly operating system"
keywords = ["os", "kernel", "operating-system", "rust"]
categories = ["os", "no-std"]

[workspace.dependencies]
# Core dependencies
spin = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bitflags = "2.4"
linked_list_allocator = "0.10"
x86_64 = "0.14"
pc-keyboard = "0.7"
uart_16550 = "0.2"
pic8259 = "0.10"
conquer-once = { version = "0.4", default-features = false }
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }

# Graphics and UI
embedded-graphics = "0.8"
tinybmp = "0.5"
tinytext = "0.1"
fontdue = "0.8"

# Networking
smoltcp = { version = "0.11", default-features = false, features = ["std", "log", "medium-ethernet", "proto-ipv4", "proto-ipv6", "proto-tcp", "proto-udp", "proto-icmp", "socket-tcp", "socket-udp", "socket-icmp"] }

# Cryptography and Security
ring = { version = "0.17", default-features = false }
sha2 = { version = "0.10", default-features = false }
aes = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }

# Serialization
# serde = { version = "1.0.210", default-features = false, features = ["derive", "alloc"] }
# serde_json = { version = "1.0.128", default-features = false, features = ["alloc"] }
toml = { version = "0.8", default-features = false }

# File systems
fat32 = "0.1"
ext2 = "0.4"
ntfs = "0.4"

# Compression
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }

# Audio
rodio = { version = "0.17", default-features = false }
cpal = { version = "0.15", default-features = false }

# Development tools
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
toml_edit = "0.20"
tar = "0.4"
chrono = { version = "0.4" }
uuid = { version = "1.6", features = ["v4"] }

# Testing
proptest = "1.4"
criterion = "0.5"
mockall = "0.12"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "packed"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
strip = "symbols"

[profile.kernel]
inherits = "release"
opt-level = "s"
lto = "thin"
panic = "abort"
codegen-units = 1

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "abort"
incremental = false
codegen-units = 1

# Custom profiles for different build targets
[profile.kernel-debug]
inherits = "dev"
opt-level = 1
panic = "abort"

[profile.userspace]
inherits = "release"
opt-level = 2
lto = "thin"

[profile.compatibility]
inherits = "release"
opt-level = 2
lto = false
codegen-units = 16

# Workspace metadata
[workspace.metadata]
rust-version = "1.75"
msrv = "1.75"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Build configuration
[workspace.metadata.raeen]
kernel_target = "x86_64-raeen"
userspace_target = "x86_64-unknown-linux-gnu"
bootloader = "raeen-bootloader"
iso_name = "raeen-os.iso"
vmdk_name = "raeen-os.vmdk"
qemu_args = [
    "-machine", "q35",
    "-cpu", "qemu64,+x2apic",
    "-smp", "4",
    "-m", "2G",
    "-vga", "std",
    "-netdev", "user,id=net0",
    "-device", "e1000,netdev=net0",
    "-audiodev", "pa,id=audio0",
    "-device", "AC97,audiodev=audio0",
    "-usb",
    "-device", "usb-tablet",
    "-enable-kvm"
]

# Package management configuration
[workspace.metadata.raeen.packages]
repository_url = "https://packages.raeen.dev"
mirrors = [
    "https://mirror1.raeen.dev",
    "https://mirror2.raeen.dev"
]
signing_key = "raeen-packages.pub"
compression = "zstd"
format_version = "1.0"

# Security configuration
[workspace.metadata.raeen.security]
sandbox_default = "strict"
code_signing_required = true
verified_boot = true
secure_boot = true
tpm_required = false
encryption_default = "aes256"

# Development configuration
[workspace.metadata.raeen.development]
test_runner = "raeen-test"
benchmark_runner = "criterion"
documentation_tool = "rustdoc"
package_tool = "raeen-pkg"
debugging_symbols = true
profiling_enabled = true

# Compatibility layers
[workspace.metadata.raeen.compatibility]
wine_version = "8.0"
android_api_level = 33
web_engine = "webkit"
flatpak_runtime = "org.freedesktop.Platform"
snap_base = "core22"
appimage_runtime = "runtime-x86_64"


