[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lints.rust]
warnings = "deny"

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
spin = "0.9.8"
x86_64 = "0.14.10"
volatile = "0.5.1"
uart_16550 = "0.2.18"
pic8259 = "0.10.2"
pc-keyboard = "0.7.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
bitflags = { version = "2.4.1", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
# Cryptography for secure boot
sha2 = { version = "0.10", default-features = false }
rsa = { version = "0.9", default-features = false }
rand_core = { version = "0.6", default-features = false }

[dev-dependencies]
bootimage = "0.10.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]


