[package]
name = "raeen-package"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Package management tool for RaeenOS"
keywords = ["package", "os", "raeen"]
categories = ["development-tools::build-utils"]

[[bin]]
name = "raeen-pkg"
path = "src/main.rs"

[dependencies]
clap.workspace = true
log.workspace = true
env_logger.workspace = true
walkdir.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tar.workspace = true
flate2.workspace = true
sha2.workspace = true
chrono.workspace = true
uuid.workspace = true

[features]
default = ["native", "deb", "rpm", "flatpak", "snap", "appimage"]
native = []
deb = []
rpm = []
flatpak = []
snap = []
appimage = []
windows = []
android = []
web = []